--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ nav ul li:hover a {
   height: 250px;
   border-radius: 50%;
   margin: 0 auto;
-  background: #010D1B url(./img/joydey.png);
+  background: #010d1b url(./img/joydey.png);
   background-position: center top;
   background-size: 105%;
   background-repeat: no-repeat;
@@ -530,7 +530,7 @@ svg.radial-progress text {
 }
 
 .skill-box svg.php circle {
-  stroke: #f0ff04;
+  stroke: #61dafb;
 }
 
 .skill-box svg.wp circle {
