--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ nav ul li:hover a {
   height: 250px;
   border-radius: 50%;
   margin: 0 auto;
-  background: #010d1b url(./img/joydey.png);
+  background: #010d1b url(./img/joydey.jpg);
   background-position: center top;
   background-size: 105%;
   background-repeat: no-repeat;
